fix: layout shift on `Drawer`/`Command` open

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,7 +55,7 @@
         @apply border-border;
     }
     body {
-        @apply bg-background text-muted-foreground;
+        @apply bg-background text-muted-foreground min-w-full;
     }
     ::-moz-selection {
         @apply bg-primary text-primary-foreground;
